force-app/main/default/objects/Candidate__c/fields/Career__c.field-meta.xml
<CustomField>
    <fullName>Career__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Career</label>
    <referenceTo>Career__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>