force-app/main/default/objects/Candidate__c/fields/Current_company__c.field-meta.xml
<CustomField>
    <fullName>Current_company__c</fullName>
    <label>Current company</label>
    <length>30</length>
    <type>Text</type>
</CustomField>