force-app/main/default/objects/Candidate__c/fields/Human_Resource__c.field-meta.xml
<CustomField>
    <fullName>Human_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Human Resource</label>
    <referenceTo>Human_Resource__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>