force-app/main/default/objects/Candidate__c/fields/percentage__c.field-meta.xml
<CustomField>
    <fullName>percentage__c</fullName>
    <label>percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>