force-app/main/default/objects/Candidate__c/validationRules/validate1.validationRule-meta.xml
<ValidationRule>
    <fullName>validate1</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT( Domain__c) =&quot;Salesforce&quot;
 &amp;&amp;
 TEXT(Career__r.Domain__c) = &quot;Java&quot;  &amp;&amp; TEXT(Career__r.Domain__c) = &quot;DotNet&quot; &amp;&amp; TEXT(Career__r.Domain__c) = &quot;Tech support&quot; &amp;&amp; TEXT(Career__r.Domain__c) = &quot;Testing&quot;</errorConditionFormula>
    <errorMessage>the value is incorrect</errorMessage>
</ValidationRule>